CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(GLuRayGUI)

FIND_PACKAGE(Qt4 REQUIRED)

SET(GLuRayGUI_SOURCES 
  glwidget.cpp
  glwidget.h
  main.cpp
  mainwindow.cpp
  mainwindow.h
  ui_mainwindow.h
  #  moc_glwidget.cpp
  #moc_mainwindow.cpp
  )
SET(GLuRayGUI_HEADERS 
  mainwindow.h
  glwidget.h
  ui_mainwindow.h
  )
SET(GLuRayGUI_FORMS
  mainwindow.ui
)
#SET(GLuRayGUI_RESOURCES
#  
#)
SET(QT_USE_QTOPENGL TRUE)
SET(QT_USE_QTNETWORK TRUE)

FIND_PACKAGE(OpenGL)

QT4_WRAP_CPP(GLuRayGUI_HEADERS_MOC ${GLuRayGUI_HEADERS})
QT4_WRAP_UI(GLuRayGUI_FORMS_HEADERS ${GLuRayGUI_FORMS})
INCLUDE(${QT_USE_FILE})
MESSAGE(STATUS "opengl_inc: " ${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${OPENGL_INCLUDE_DIR} )
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_EXECUTABLE(GLuRayGUI ${GLuRayGUI_SOURCES}
  ${GLuRayGUI_HEADERS_MOC}
  ${GLuRayGUI_FORMS_HEADERS}
  )
TARGET_LINK_LIBRARIES(GLuRayGUI ${QT_LIBRARIES} ${OPENGL_LIBRARY})


